fixed overflowing form inputs

--- a/Aufgabe1/gta_v1/public/stylesheets/style.css
+++ b/Aufgabe1/gta_v1/public/stylesheets/style.css
@@ -175,6 +175,8 @@ a {
   color: var(--gray-color); 
   margin-left: 8%;
   margin-top: 4%;
+  max-width: 8rem;
+  margin-right: 2rem; 
 }
 
 #lat, #lon {
